# mmsstv-portable

./: .gitignore  CMakeLists.txt  LICENSE  TEST_RESULTS.txt  VIS_DECODER_VALIDATION_REPORT.md  analyze_sstv_tones.py  analyze_vis_errors.py  sstv_encoder.pc.in  test_all_modes.sh  test_all_vis_complete.sh  test_authoritative.sh  test_ciirtank_amplitude.sh  test_modes_diagnostic.sh  test_timing_sweep.sh  test_vis_all.sh
docs/: AVT.md  BPF_AGC_ENABLEMENT_SUMMARY.md  BPF_AGC_IMPLEMENTATION_GUIDE.md  DEBUG_WAV_GUIDE.md  DECODER_ARCHITECTURE_BASELINE.md  DECODER_STATUS.md  DOCUMENTATION_INDEX.md  DSP_CONSOLIDATED_GUIDE.md  DSP_TEST_RESULTS_SUMMARY.md  ENCODING_ONLY_PLAN.md  FILTER_IMPLEMENTATION_VERIFICATION.md  FILTER_SPECIFICATIONS.md  FREQUENCY_ANALYSIS.md  HF_IMPAIRMENTS_TEST_GUIDE.md  MASTER_PLAN_REVIEW.md  MMSSTV_ARCHITECTURE_ANALYSIS.md  NEXT_STEPS.md  PHASE_6_VALIDATION_PLAN.md  PORTING_ANALYSIS.md  PROGRESS_DASHBOARD.md  PROJECT_COMPLETION_SUMMARY.md  README.md  RX_DECODER_PROGRESS.md  RX_FEATURES_PLAN.md  SESSION_COMPLETION.md  SESSION_HANDOFF_SUMMARY.md  SSTV_TIMING_FIXES_FINAL.md  START_HERE.md  S_UNIT_DBM_REFERENCE.md  TEST_MODES_ANALYSIS.md  TEST_RESULTS.md  VCO_TIMING_FIX.md  VIS_DECODER_ANALYSIS.md  VIS_TEST_AUDIO_SAMPLES.md  VIS_TEST_IMPLEMENTATION_SUMMARY.md  VIS_TEST_SUITE_REPORT.md  Wraase SC-2.md
examples/: decode_wav.c  encode_wav.c  test_real_images.c
include/: sstv_decoder.h  sstv_encoder.h
src/: SpectralSubtractionDNR.cpp  SpectralSubtractionDNR.h  decoder.cpp  decoder.cpp.bak  dsp_filters.cpp  dsp_filters.h  encoder.cpp  modes.cpp  vco.cpp  vco.h  vis.cpp  vis.h
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  test_decoder_basic.c  test_dsp_reference.cpp  test_encode_smoke  test_encode_smoke.c  test_hf_impairments.cpp  test_vis_codes  test_vis_codes.c  test_vis_decode.c  test_vis_decode_wav.c  vis_codes.json
tests/test_modes/: REPORT.txt
utils/: analyze_noise.py  analyze_tones.py  analyze_vis.py  analyze_vis_detailed.py  analyze_vis_wav.py  analyze_wav.py  debug_vis.c  decode_wav.c  decode_wav_debug.c  generate_all_modes.c  generate_test_tones.py  list_modes.c  make_tone.py  scan_vis_timing.py  simple_wav_analyze.py  test_all_modes.sh  test_all_vis_codes.sh  test_all_vis_complete.sh  test_authoritative.sh  test_iir_filters.cpp  test_modes_diagnostic.sh  test_timing_sweep.sh  test_tone_decode  test_tone_decode.cpp  test_vco_direct  test_vco_direct.cpp  test_vco_output  test_vco_output.cpp  test_vis_all.sh  test_vis_comprehensive.sh  test_vis_direct.cpp  verify_vis.py
